--- a/product-04.html
+++ b/product-04.html
@@ -167,9 +167,9 @@
 		
 		<ul class="summary-list">
 			<li>
-				<h2>Model</h2>
+				<h2>Package</h2>
 
-				<img src="img/Simcard.png" alt="Alfa Romeo Giulietta" class="product-preview">
+			
 				
 				<h3>All in One Package</h3>
 				
