--- a/purchase.html
+++ b/purchase.html
@@ -8,7 +8,12 @@
 	<h1> <center>JOKES ON YOU</center></h1>
  		<img src="img/joker.jpg" width="" height="" alt="joker img">
 
- 	<div id = center> 
+ 	<div id = "center"> 
+		<p>DISCLAIMER : This Webpage is for a University project. I took this project more in an research direction here 
+		are some webpages where I found my findings</p>
+		<ul>
+			<li> <a href="https://www.experian.com/blogs/ask-experian/heres-how-much-your-personal-information-is-selling-for-on-the-dark-web/">Buying Identity online</a></li>
+		</ul>
  	</div>
 </body>
 </html>
