--- a/purchase.html
+++ b/purchase.html
@@ -9,7 +9,7 @@
  		<img src="img/joker.jpg" width="" height="" alt="joker img">
 
  	<div id = "center"> 
-		<p>DISCLAIMER : This Webpage is for a University project. I took this project more in an research direction here 
+		<p>DISCLAIMER : This Webpage is for a University project. I took this project more in an research direction. Here 
 		are some webpages where I found my findings</p>
 		<ul>
 			<li> <a href="https://www.experian.com/blogs/ask-experian/heres-how-much-your-personal-information-is-selling-for-on-the-dark-web/">Buying Identity online</a></li>
