--- a/purchase.html
+++ b/purchase.html
@@ -10,7 +10,7 @@
 
  	<div id = "center"> 
 		<p>DISCLAIMER : This Webpage is for a University project. I took this project more in an research direction. Here 
-		are some webpages where I found my findings</p>
+		are some webpages where I found my findings. (Prices fluctuate because of demand and it is a market place) </p>
 		<ul>
 			<li> <a href="https://www.experian.com/blogs/ask-experian/heres-how-much-your-personal-information-is-selling-for-on-the-dark-web/">Buying Identity online</a></li>
 		</ul>
