--- a/purchase.html
+++ b/purchase.html
@@ -13,6 +13,9 @@
 		are some webpages where I found my findings. (Prices fluctuate because of demand and it is a market place) </p>
 		<ul>
 			<li> <a href="https://www.experian.com/blogs/ask-experian/heres-how-much-your-personal-information-is-selling-for-on-the-dark-web/">Buying Identity online</a></li>
+			<li> <a href="http://www.police.govt.nz/advice/email-and-internet-safety/online-identity-theft">NZ About online identity theft</a></li>
+			<li> <a href="https://www.digitaltrends.com/mobile/sim-swap-fraud-explained/">Sim Card Scam</a></li>
+		
 		</ul>
  	</div>
 </body>
